# wyoming-microsoft-stt

./: .gitignore  .release-please-manifest.json  .ruff.toml  CHANGELOG.md  Dockerfile  Makefile  README.md  build.yaml  config.yaml  pyproject.toml  release-please-config.json  requirements.txt  setup.py
.github/: dependabot.yaml
.github/workflows/: builder.yml  builder_release.yml  lint.yaml  publish.yaml  publish_archive.yaml  release-please.yaml  release_please.yaml  test.yaml  test_builder.yml
rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
rootfs/etc/s6-overlay/s6-rc.d/microsoft/: run
tests/: conftest.py  test_microsoft_stt.py  test_multilanguage.py  test_transcribe.py
translations/: en.yaml
wyoming-microsoft-stt/: __init__.py  __main__.py  download.py  file_hash.py  handler.py  languages.json  microsoft_stt.py
wyoming_microsoft_stt/: __init__.py  __main__.py  download.py  handler.py  microsoft_stt.py  version.py
